--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Yang Yuzhou!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<p>When I knew more, I wouldn't konw more</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:yangyuzhou001@foxmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/yangyuzhou001</a></li>
+        		<li><a href="https://github.com/yangyuzhou001">github.com/yangyuzhou001</a></li>
 			</ul>
 		</footer>
 	</body>
