--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Yang Yuzhou!</h1>
-				<p>When I knew more, I wouldn't konw more</p>
+				<p>When I knew more, I wouldn't know more</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
