--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Yang Yuzhou!</h1>
-				<p>When I knew more, I wouldn't know more</p>
+        		<h1>Hello, world, I'm Yang Yuzhou!</h1>
+				<p>Socrates' Circle </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
