--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     		</ul>
 		</nav>
 		<div class="container">
+			
+---
+layout: default
+title: Yang Yuzhou
+---
     		<div class="blurb">
         		<h1>Hello, world, I'm Yang Yuzhou!</h1>
 				<p>Socrates' Circle </p>
